k8s/infra/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: data
spec:
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: http
