k8s/infra/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: data
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: pgadmin
      port:
        number: 80
  tls:
    - hosts:
        - pgadmin
